...
              variant="secondary"
              style={commonStyles.flex}
              size="compact"
            />
            <Button
              label="Store"
              testID="purrivacy.passphraseStorage.store"
              onPress={onStore}
              style={commonStyles.flex}
              size="compact"
            />
          </View>
        </View>
...
